--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node app.ts",
-    "dev:watch": "nodemon --watch './**/*.ts' --exec ts-node app.ts"
+    "dev:watch": "nodemon --watch './**/*.ts' --exec 'ts-node' app.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^18.6.2",
-    "nodemon": "^2.0.19",
+    "nodemon": "^2.0.22",
     "ts-node": "^10.9.2",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4"
